# ComfyUI-JakeUpgrade

./: .gitignore  README.md  __init__.py  categories.py  config.ini.exsample  install.bat  install.py  install_manual.py  jake_upgrade.js  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Workflow/: JK_workflow_Concept.json  JK_workflow_Detailer.json  JK_workflow_Inpaint.json  JK_workflow_Upscale.json  JK_workflow_tex2img_Simple.json
Workflow/ComfyUI/: All Grp Nodes-JK.json  All Nodes-JK.json  All Subgraph-JK.json  All Subgraph-Wan-JK.json
Workflow/ComfyUI_~frontend-1.15.13/: All Grp Nodes-JK.json  All Nodes-JK.json
Workflow/ComfyUI_~frontend-1.23.4/: All Grp Nodes-JK.json  All Grp Nodes-Wan-JK.json  All Nodes-JK.json
Workflow/Krita/: JK_workflow-Krita Common Adv.json  JK_workflow-Krita Common.json  JK_workflow-Krita Flux Adv.json  JK_workflow-Krita Flux.json  JK_workflow-Krita SD15 Adv.json  JK_workflow-Krita SD15.json  JK_workflow-Krita SD3 Adv.json  JK_workflow-Krita SD3.json  JK_workflow-Krita SDXL Adv.json  JK_workflow-Krita SDXL.json
Workflow/Main/: JK_workflow_Seamless Texture.json  JK_workflow_img2mesh_3DGS.json  JK_workflow_img2mesh_CRM&Zero123plus&MVDream&CharacterGen.json  JK_workflow_img2mesh_Unique3D&Wonder3D&Era3D.json  JK_workflow_img2mesh_Zero123&SV3D.json  JK_workflow_img2mesh_multi.json  JK_workflow_img2mesh_single.json  JK_workflow_img2mesh_single_CRM&Zero123plus&MVDream&CharacterGen.json  JK_workflow_img2mesh_single_CRM&Zero123plus.json  JK_workflow_img2mesh_single_Unique&Wonder&Era3D.json  JK_workflow_img2mesh_single_Unique3D.json  JK_workflow_tex2img_img2img_Complete.json  JK_workflow_tex2img_img2img_SD15.json  JK_workflow_tex2img_img2img_SDXL.json  JK_workflow_txt2img_img2img_API.json  JK_workflow_txt2img_img2img_Flux.json  JK_workflow_txt2img_img2img_SAIAPI.json  JK_workflow_txt2img_img2img_SD15.json  JK_workflow_txt2img_img2img_SD3.json  (+2 more)
js/: jake_upgrade.js
nodes/: SimpleEval_Node_Examples.txt  jake_node_3d.py  jake_node_3d_sam3dseq.py  jake_node_3d_viewer.py  jake_node_audio.py  jake_node_controlnet.py  jake_node_deprecated.py  jake_node_experimental.py  jake_node_image.py  jake_node_latent.py  jake_node_lora.py  jake_node_mask.py  jake_node_math.py  jake_node_misc.py  jake_node_prompt.py  jake_node_prompt_ABC.py  jake_node_prompt_random.py  jake_node_prompt_random_ABC.py  jake_node_prompt_shared.py  jake_node_switch.py  jake_node_video.py  jake_tools.py  jake_upgrade.py  jake_utils.py
replacement/: .gitignore
web/: .gitignore
(+947 files in other folders)
