[project]
name = "comfyui-jakeupgrade"
description = "ComfyUI workflow customization by Jake."
version = "2.6.2"
license = {file = "LICENSE"}
dependencies = ["opencv-python", "piexif", "torch", "torchvision", "numpy", "pillow", "simpleeval", "PyYAML", "toml"]

[project.urls]
Repository = "https://github.com/jakechai/ComfyUI-JakeUpgrade"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jakechaikefu"
DisplayName = "ComfyUI-JakeUpgrade"
Icon = ""